packages/typ/tests/fixtures/diagnostics/0852_polyvar_call_wrong_tag_10.ml
let read_kappa : [ `A | `B ] -> int = function
  | `A -> 9
  | `B -> 10

let _ = read_kappa `C
